INCLUDES = 
METASOURCES = AUTO


all: scripts

scripts: 
	$(LN_S) $(LWFS_SRCDIR)/scripts .

SUBDIRS = authr-tests
SUBDIRS += checkpoint-tests
SUBDIRS += db-tests
SUBDIRS += gss-api-tests
SUBDIRS += libsysio-tests
SUBDIRS += naming-tests
#SUBDIRS += piob.modified
SUBDIRS += portals-tests
SUBDIRS += rpc-tests
SUBDIRS += ss-tests
SUBDIRS += threadpool-tests
SUBDIRS += tracing-tests
SUBDIRS += xdr-tests
SUBDIRS += ebofs-tests
#SUBDIRS += xchange-tests

CLEANFILES = 
